--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
     "primeflex": "^3.3.1",
