--- a/.hintrc
+++ b/.hintrc
@@ -11,5 +11,12 @@
         ]
       }
     ]
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not ie 11",
+    "not and_ff <= 118",
+    "not firefox <= 117",
+    "not firefox <= 118"
+  ]
 }
