--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "projet_tache_21",
+  "name": "students",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
@@ -11,22 +11,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.2",
-    "clsx": "^2.0.0",
-    "dotenv": "^16.3.1",
-    "firebase": "^10.7.1",
-    "primeflex": "^3.3.1",
+    "faker": "^6.6.6",
+    "mockjs": "^1.1.0",
     "primeicons": "^6.0.1",
     "primereact": "^10.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
-    "react-select": "^5.8.0",
-    "react-toastify": "^9.1.3",
-    "rsuite": "^5.48.0",
+    "rsuite": "^5.48.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,6 +48,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@faker-js/faker": "^8.3.1"
   }
 }
