--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "rsuite": "^5.48.1",
+    "source-map-loader": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
