--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-bootstrap": "^2.9.1",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "rsuite": "^5.48.1",
     "web-vitals": "^2.1.4"
   },
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.3.1"
+    "@faker-js/faker": "^8.3.1",
+    "source-map-loader": "^4.0.1"
   }
 }
