--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "rsuite": "^5.48.1",
-    "source-map-loader": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -57,6 +56,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "source-map-loader": "^4.0.1"
   }
 }
