--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.9.1",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.21.0",
