--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "clsx": "^2.0.0",
