--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "clsx": "^2.0.0",
+    "crypto-random-string": "^5.0.0",
     "dotenv": "^16.3.1",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.7.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
