--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "clsx": "^2.0.0",
+    "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-random-string": "^5.0.0",
     "dotenv": "^16.3.1",
