--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.7.1",
+    "formik": "^2.4.5",
     "jspdf": "^2.5.1",
     "material-react-table": "^2.1.0",
     "primeflex": "^3.3.1",
