--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=325530473681
 REACT_APP_FIREBASE_APP_ID=1:325530473681:web:9096dc86660f089e0a21f0
 REACT_APP_FIREBASE_MEASUREMENT_ID=G-4T02XMFXF2
  0
+GENERATE_SOURCEMAP=false
