--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-random-string": "^5.0.0",
+    "date-fns": "^3.0.6",
     "dotenv": "^16.3.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.7.1",
