--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-random-string": "^5.0.0",
+    "date-fns": "^3.2.0",
     "dotenv": "^16.3.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "material-react-table": "^2.1.0",
     "primeflex": "^3.3.1",
