--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.7.1",
+    "firestore-export-import": "^1.4.0",
     "formik": "^2.4.5",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
