--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
+    "react-timestamp": "^6.0.0",
     "react-toastify": "^9.1.3",
     "rsuite": "^5.48.1",
     "util": "^0.12.5",
