--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyCxiaI2Gjl36o8vujiTSc9e08br7-pbhzM
-REACT_APP_FIREBASE_AUTH_DOMAIN=projet-21-v1.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=projet-21-v1
-REACT_APP_FIREBASE_STORAGE_BUCKET=projet-21-v1.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=692327126397
-REACT_APP_FIREBASE_APP_ID=1:692327126397:web:e806acf7ad274e9736a814
-REACT_APP_FIREBASE_MEASUREMENT_ID=G-GCXR3XQ8LM
+# REACT_APP_FIREBASE_API_KEY=AIzaSyCxiaI2Gjl36o8vujiTSc9e08br7-pbhzM
+# REACT_APP_FIREBASE_AUTH_DOMAIN=projet-21-v1.firebaseapp.com
+# REACT_APP_FIREBASE_PROJECT_ID=projet-21-v1
+# REACT_APP_FIREBASE_STORAGE_BUCKET=projet-21-v1.appspot.com
+# REACT_APP_FIREBASE_MESSAGING_SENDER_ID=692327126397
+# REACT_APP_FIREBASE_APP_ID=1:692327126397:web:e806acf7ad274e9736a814
+# REACT_APP_FIREBASE_MEASUREMENT_ID=G-GCXR3XQ8LM
 
 # base de donnée tache 21
   # REACT_APP_FIREBASE_API_KEY=AIzaSyCCtNZzWXbYO14laq7FpInNfK5Y8Oslqw4
@@ -21,13 +21,13 @@ REACT_APP_FIREBASE_MEASUREMENT_ID=G-GCXR3XQ8LM
 
 
 # base de donée 2ièm option 
-# REACT_APP_API_KEY=AIzaSyALz9S1yxJJJO9Fq9Zd-ZUKM_0LgvWVjaU
-# REACT_APP_AUTH_DOMAIN=finalisation-66753.firebaseapp.com
-# REACT_APP_PROJECT_ID=finalisation-66753
-# REACT_APP_STORAGE_BUCKET=finalisation-66753.appspot.com
-# REACT_APP_MESSAGING_SENDER_ID=611476472504
-# REACT_APP_APP_ID=1:611476472504:web:08961bf16640f010292a4d
-# REACT_APP_FIREBASE_MEASUREMENT_ID=G-4T02XMFXF2
+REACT_APP_API_KEY=AIzaSyALz9S1yxJJJO9Fq9Zd-ZUKM_0LgvWVjaU
+REACT_APP_AUTH_DOMAIN=finalisation-66753.firebaseapp.com
+REACT_APP_PROJECT_ID=finalisation-66753
+REACT_APP_STORAGE_BUCKET=finalisation-66753.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=611476472504
+REACT_APP_APP_ID=1:611476472504:web:08961bf16640f010292a4d
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-4T02XMFXF2
 
 #  0
 
